添加商品管理模块-查看商品基本信息改动-日志服务